--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Hello World, MainActivity"
-    />
-</LinearLayout>
+    android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/orientation"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/orientation" />
+
+    <EditText
+        android:id="@+id/name"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Name" />
+
+    <Button
+        android:id="@+id/message_generator"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Click for a message" />
+
+</LinearLayout>
